boosted unit test coverage on feed and registration controllers

--- a/force-app/main/default/classes/SummitEventsRegisterAppointmentCtlr.cls
+++ b/force-app/main/default/classes/SummitEventsRegisterAppointmentCtlr.cls
@@ -273,16 +273,13 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
             try {
                 insert appointments;
             } catch (Exception ex) {
-                ApexPages.Message myMsg = new ApexPages.Message(ApexPages.Severity.WARNING, ex.getMessage());
-                ApexPages.addMessage(myMsg);
+                ApexPages.addMessage(new ApexPages.Message(ApexPages.Severity.WARNING, ex.getMessage()));
             }
         }
 
         public void deleteAppointments(List<Summit_Events_Appointments__c> appointments) {
             try {
-                // if (Schema.sObjectType.Summit_Events_Appointments__c.isDeletable()) {
                 delete appointments;
-                //  }
             } catch (Exception ex) {
                 ApexPages.addMessage(new ApexPages.Message(ApexPages.Severity.WARNING, ex.getMessage()));
             }
