--- a/force-app/test/default/classes/SummitEventsFeed_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsFeed_TEST.cls
@@ -7,7 +7,7 @@
 private class SummitEventsFeed_TEST {
     @IsTest static void testEventFeed() {
         List<Summit_Events_Instance__c> seaTestInstances = SummitEventsTestSharedDataFactory.createTestEvent();
-        User testUser = SummitEventsTestSharedDataFactory.userToRunWith('Standard User','Summit_Events_Registrant');
+        User testUser = SummitEventsTestSharedDataFactory.userToRunWith('Standard User', 'Summit_Events_Registrant');
         System.runAs(testUser) {
             Test.startTest();
             RestRequest req = new RestRequest();
@@ -87,7 +87,36 @@ private class SummitEventsFeed_TEST {
             SummitEventsFeed.getSummitEventsFeed();
             System.assert(res.responseBody.toString().contains('UDAR([])'));
             Test.stopTest();
-        }
 
+        }
+    }
+
+    @IsTest static void testEventFeedOverrides() {
+        List<Summit_Events_Instance__c> seaTestInstances = SummitEventsTestSharedDataFactory.createTestEvent();
+        seaTestInstances[1].Alternate_Registration_URL_Override__c = 'http://testingAnOverride.com';
+        seaTestInstances[1].Location_Address_Override__c = 'New location override';
+        seaTestInstances[1].Location_Map_Link_Override__c = 'Map link override';
+        seaTestInstances[1].Feed_Registration_Button_Text_Override__c = 'New button override';
+        update seaTestInstances;
+
+        User testUser = SummitEventsTestSharedDataFactory.userToRunWith('Standard User', 'Summit_Events_Registrant');
+        System.runAs(testUser) {
+            //test instance override
+            RestRequest req = new RestRequest();
+            RestResponse res = new RestResponse();
+            req.requestURI = '/services/apexrest/summiteventfeed';
+            req.httpMethod = 'GET';
+            req.addHeader('Content-Type', 'application/json');
+            req.params.put('feedType', 'eventList');
+            req.params.put('hideClosed', 'blah');
+            RestContext.request = req;
+            RestContext.response = res;
+            SummitEventsFeed.getSummitEventsFeed();
+
+            System.assert(res.responseBody.toString().contains('testingAnOverride.com'));
+            System.assert(res.responseBody.toString().contains('New location override'));
+            System.assert(res.responseBody.toString().contains('Map link override'));
+            System.assert(res.responseBody.toString().contains('New button override'));
+        }
     }
 }
